--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="hero">
       <div class="container hero-container">
         <div class="hero-text">
-          <h1>Hi, I’m <span class="animate-text">Srinivasa Rao</span></h1>
+          <h1>Hi, I'm <span class="animate-text">Srinivasa</span></h1>
           <p>An aspiring Data Scientist from Sri City, India, passionate about turning complex data into compelling stories and building intelligent solutions.</p>
           <a href="#contact" class="btn magnetic">Get In Touch</a>
         </div>
